fix: adjust z-index for custom alert positioning

--- a/css/common.css
+++ b/css/common.css
@@ -52,4 +52,5 @@ body {
   position: fixed;
   top: 80px;
   right: 25px;
+  z-index: 1111;
 }
